--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "author": "Keegan Burkett <keegan.t.marciniak@gmail.com>",
   "dependencies": {
+    "@videojs/themes": "^1.0.0",
     "gatsby": "^2.15.31",
     "gatsby-image": "^2.2.24",
     "gatsby-plugin-manifest": "^2.2.20",
@@ -23,7 +24,9 @@
     "react-feather": "^2.0.3",
     "react-helmet": "^5.2.1",
     "react-scrollspy": "^3.4.0",
-    "styled-components": "^4.4.0"
+    "styled-components": "^4.4.0",
+    "video.js": "^7.7.5",
+    "videojs-youtube": "^2.6.1"
   },
   "devDependencies": {
     "prettier": "^1.18.2"
