--- a/package.json
+++ b/package.json
@@ -18,13 +18,13 @@
     "gatsby-plugin-web-font-loader": "^1.0.4",
     "gatsby-source-filesystem": "^2.1.29",
     "gatsby-transformer-sharp": "^2.2.20",
-    "plyr": "^3.5.10",
     "prop-types": "^15.7.2",
     "react": "^16.10.2",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^16.10.2",
     "react-feather": "^2.0.3",
     "react-helmet": "^5.2.1",
+    "react-player": "^1.15.3",
     "react-scrollspy": "^3.4.0",
     "styled-components": "^4.4.0",
     "video.js": "^7.7.5",
